stable parcel build to start with

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <div id="app-root">Loading...</div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
